Update resume download link to .docx format

--- a/index.html
+++ b/index.html
@@ -933,9 +933,9 @@ p:last-child { margin-bottom: 0; }
         <a href="mailto:john@velobpa.com">john@velobpa.com</a>
         <a href="https://linkedin.com/in/johndrefahl" target="_blank" rel="noopener">LinkedIn</a>
         <a href="https://github.com/Velocity-BPA" target="_blank" rel="noopener">GitHub</a>
-        <a href="/John_Drefahl_Resume.pdf" class="resume-btn" download>
+        <a href="/John_Drefahl_Automation_Engineer_Resume.docx" class="resume-btn" download>
           <svg width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"/><polyline points="7 10 12 15 17 10"/><line x1="12" y1="15" x2="12" y2="3"/></svg>
-          Resume PDF
+          Download Resume
         </a>
       </div>
       <div class="footer-copy">&copy; 2026 John Drefahl</div>
